# num-modular

./: Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yml
bench/: Cargo.toml
bench/benches/: double.rs  modops.rs
src/: barret.rs  barrett.rs  bigint.rs  double.rs  lib.rs  mersenne.rs  monty.rs  preinv.rs  prim.rs  reduced.rs  tests.rs  word.rs
src/word/: mod.rs  u128.rs  u64.rs
