[package]
name = "num-modular"
version = "0.5.0"
edition = "2018"

repository = "https://github.com/cmpute/num-modular"
keywords = ["mathematics", "numeric", "number-theory", "modular", "montgomery"]
categories = ["mathematics", "algorithms", "no-std"]
documentation = "https://docs.rs/num-modular"
license = "Apache-2.0"
description = """
Implementation of efficient integer division and modular arithmetic operations with generic number types.
Supports various backends including num-bigint, etc..
"""
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1.44"
num-traits = "0.2.14"

[dependencies.num-bigint]
optional = true
version = "0.4.3"
default-features = false

[dev-dependencies]
rand = "0.8.4"

[workspace]
members = [
  "bench",
]

[package.metadata.docs.rs]
all-features = true

[features]
std = []
